last but not  least

--- a/code.html
+++ b/code.html
@@ -166,10 +166,37 @@
          <div id="p3">
             <img class="introd" src="nvvv.jpg" alt="nouveau">
          </div>
-      </div>
-      <div id="global5">
-         <div id="one">
+         <div id="p4">
             <p><strong>How we are different</strong></p>
+         </div>
+         <div id="p5">
+            <div id="pp1">
+              <div id="e1">
+               <h2>Easiest_To_Use<br>
+                   Product</h2>
+              </div>
+              <div id="e2">
+              <p>We arr the pionners of simplifying goals we are<br>
+                 proving it manegment </p>
+              </div>
+              <div id="e3">
+               <a href="https://ludwig.guru/s/product+is+easy+to+use" target="_blank">learn more</a>
+              </div>
+            </div>
+            <div id="pp2">
+               <div id="o1">
+                  <h2 >Best Resources<br>
+                     & Support</h2>
+               </div>
+               <div id="o2">
+                  <p>we are widely know for offering the best<br>
+                     resources and support</p>
+               </div>
+               <div id="o3">
+                  <a href="https://www.bestresourcecr.com/" target="_blank">learn more</a>
+               </div>
+            </div>
+
          </div>
       </div>
    </body>
