--- a/code.html
+++ b/code.html
@@ -16,7 +16,7 @@
             <a href="#ressource">ressource</a>
          </li>
          <li>
-            <a href="#sign up">sign up</a>
+            <a href="sign up.html" target="_blank">sign up</a>
          </li>  
       </div>
        </nav>
