--- a/code.html
+++ b/code.html
@@ -199,28 +199,30 @@
 
          </div>
       </div>
-      <footer >
-         <div id="glob">
-            <div id="tit">
-               <h4><strong>Pebbo</strong></h4>
-            </div>
-            <div id="txt">
-               <p> Our simple but powerful  OKR+ platform turns great <br/>
-                  strategies into amazing results . And  it's free .</p>
-            </div>
-            <div id="imgg">
-               <img src="footer.png" alt="img footer">
-            </div>
+   </div>
+
+      <div id="hadhemi">
+         <div id="footer">
+           <div id="tit">
+             <h4><strong>Pebbo</strong></h4>
+           </div>
+           <div id="txt">
+             <p>Our simple but powerful OKR+ platform turns great<br>strategies into amazing results. And it's free.</p>
+           </div>
+           <div id="imgg">
+             <img src="footer.png" alt="img footer">
+           </div>
          </div>
          <div id="ressource">
-            <div id="tit2">
-               <h4><strong>ressources</strong></h4>
-            </div>
-            <div id="txt2">
-               <p>Features<br>pricing<br>login<br>signup</p>
-            </div>
+           <div id="tit2">
+             <h4><strong>ressources</strong></h4>
+           </div>
+           <div id="txt2">
+             <p>Features<br>Pricing<br>Login<br>Signup</p>
+           </div>
          </div>
-      </footer>
+       </div>
+    
    </body>
 
 </html>
