--- a/code.html
+++ b/code.html
@@ -196,33 +196,12 @@
                   <a href="https://www.bestresourcecr.com/" target="_blank">learn more</a>
                </div>
             </div>
-
          </div>
       </div>
    </div>
-
-      <div id="hadhemi">
-         <div id="footer">
-           <div id="tit">
-             <h4><strong>Pebbo</strong></h4>
-           </div>
-           <div id="txt">
-             <p>Our simple but powerful OKR+ platform turns great<br>strategies into amazing results. And it's free.</p>
-           </div>
-           <div id="imgg">
-             <img src="footer.png" alt="img footer">
-           </div>
-         </div>
-         <div id="ressource">
-           <div id="tit2">
-             <h4><strong>ressources</strong></h4>
-           </div>
-           <div id="txt2">
-             <p>Features<br>Pricing<br>Login<br>Signup</p>
-           </div>
-         </div>
-       </div>
-    
+   <div id="footer">
+      <div id="peboo">peboo</div>
+   </div>
    </body>
 
-</html>
+
