--- a/code.html
+++ b/code.html
@@ -200,7 +200,23 @@
       </div>
    </div>
    <div id="footer">
-      <div id="peboo">peboo</div>
+      <div id="case1">
+         <h3><strong>Peboo</strong></h3>
+         <p class="s1">Our simple but powerful  OKR+ platform turns great <br/> strategies into amazing results . And  it's free .</p>
+         <img  src="footer.png" alt="image_footer">
+      </div>
+      <div id="case2">
+         <h3><strong>Ressources</strong></h3>
+         <p class="s2">features<br><br>pricing<br><br>login<br><br> signup</p>
+      </div>
+      <div id="case3">
+         <h3><strong>Legal</strong></h3>
+         <p class="s3">Terme of Use<br><br>Privace Policy<br><br>Legal Notice</p>
+      </div>
+      <div id="case4">
+         <h3><strong>Links</strong></h3>
+         <p class="s4">Feedback<br><br>Priavce Plicy<br><br>Legal Notice</p>
+      </div>
    </div>
    </body>
 
