--- a/code.html
+++ b/code.html
@@ -27,23 +27,26 @@
       </div>
       <div>
       <br><br><br><br>
-      <h1>
-         <p>
-           <strong>Your strategy is <br>only as good as <br> you execute it</strong>
-         </p>
-      </h1>
+      <div id="present">
+         <h1>
+            <p>
+              <strong>Your strategy is <br>only as good as <br> you execute it</strong>
+            </p>
+         </h1>
+         </div>
+         <div>
+            <p class="j1">
+               Our simple but powerful  OKR+ platform turns great <br/>
+                strategies into amazing results . And  it's free .
+            </p>
+         </div>
+         <div id="j4">
+            <label for="email"></label>
+            <input  type="email" id="email" name="email" placeholder=" enter your e_mail" required>
+            <button class="start_button">Get Started</button>
+         </div>
       </div>
-      <div>
-         <p>
-            Our simple but powerful  OKR+ platform turns great <br/>
-             strategies into amazing results . And  it's free .
-         </p>
-      </div>
-      <div>
-         <label for="email"></label>
-         <input  type="email" id="email" name="email" placeholder=" enter your e_mail" required>
-         <button class="start_button">Get Started</button>
-      </div>
+      
       <br>
       <br>
       <br>
